feat: get all universities
