# src/app.js
@@ -1,6 +1,7 @@
 const express = require('express');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocs = require('../swagger.json');
+const UniversityRoutes = require('./routes/university.routes');
 const { createError } = require('./utils/createErrors');
 const handleErrors = require('./utils/handleErrors');
 
@@ -10,6 +11,7 @@ app.use(express.json());
 app.use(express.urlencoded({ extended: true }));
 
 app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocs));
+app.use('/universities', UniversityRoutes);
 
 app.use((req, res, next) => {
   next(createError(404));
